# django-jacc

./: .coverage  .deploy.swp  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE.txt  MANIFEST.in  README.md  coverage.xml  deploy  linecalc.conf  msg  mypy.ini  pre-release  prospector.yml  pyproject.toml  pytype.cfg  requirements-dev.txt  requirements-dev.txt.save  requirements.txt  setup.py  test-coverage  tmux-qa
jacc/: __init__.py  admin.py  apps.py  format.py  forms.py  helpers.py  interests.py  models.py  py.typed  serializers.py  services.py  settle.py  tests.py  views.py
jacc/management/commands/: calculate_balances.py  invoice_balance.py  update_balances.py  update_invoices.py
jacc/migrations/: 0001_initial.py  0001_squashed_0014_auto_20180430_1506.py  0002_auto_20171020_1331.py  0003_auto_20171030_1933.py  0004_auto_20171030_1935.py  0005_auto_20171030_1958.py  0006_account_name.py  0007_invoice_number.py  0008_auto_20180121_1705.py  0009_accountentry_archived.py  0010_auto_20180201_0734.py  0011_auto_20180208_1146.py  0012_auto_20180218_0638.py  0013_auto_20180329_1052.py  0014_auto_20180430_1506.py  0015_auto_20180505_1512.py  0016_auto_20180505_1604.py  0017_auto_20180807_1808.py  0018_auto_20181008_2322.py  0019_entrytype_identifier.py  0020_auto_20191202_2332.py  0021_auto_20191209_2231.py  0022_auto_20200629_0346.py  0023_accountentrynote.py  0024_account_notes.py  0024_accountentry_cached_balance.py  0025_account_notes.py  0025_alter_invoice_number.py  0026_alter_accountentry_cached_balance.py  0026_alter_invoice_number.py  0027_alter_invoice_paid_amount.py  0027_remove_accountentry_cached_balance.py  0028_alter_invoice_amount_alter_invoice_overpaid_amount_and_more.py  0029_alter_account_currency.py  0030_accountentry_jacc_accoun_account_f79b79_idx.py
jacc/migrations/2.x.x/: 0004_auto_20171030_1935.py  0006_account_name.py  0007_invoice_number.py  0014_auto_20180430_1506.py  (+3 more)
project/: settings.py  travis.py  urls.py
(+10 files in other folders)
